--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
         <meta name="MobileOptimized" content="320" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
         <link rel="stylesheet" href="jss/style.css" />
+        <script type="text/javascript" src="jss/library.js" />
         <link rel="shortcut icon" href="img/favicon.ico" />
         <link rel="apple-touch-icon" href="img/logo-114.png"  sizes="114x114"/>
         <link rel="apple-touch-icon" href="img/logo-72.png"  sizes="72x72"/>
@@ -12,46 +13,57 @@
         <link rel="apple-touch-startup-image" href="img/splash-touch.png">
         <title></title>
     <body>
-        <div class="wrapper">          
-            <a id="header" href="index.html"><img src="img/logo-57.png" />
-                <div class="titre">
-                    <h1>MyBd.fr</h1>
-                    <h2>plein d'infos sur les BD</h2>
-                </div></a>
+        <div class="wrapper" >
+            <header>          
+                <a id="header" href="index.html"><img src="img/logo-57.png"/>
+                    <hgroup>
+                        <h1>MyBd.fr</h1>
+                        <h2>plein d'infos sur les BD</h2>
+                    </hgroup></a>
+            </header>
         </div>
         <br  class="clear"/>
         <div class="wrapper" >
-            <div id="menu">
+            <nav id="menu">               
                 <ul>
                     <li><a href="search.php">Search</a></li>
                     <li><a href="last.php">Last</a></li>
                     <li><a href="legal.php">Legal</a></li>                  
                     <li><a href="random.php">Random</a></li>
                 </ul>
-            </div>
+            </nav>            
         </div>
-
+        <video  width="400" height="200" controls>
+    <source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/mp4">
+      <source src="http://clips.vorwaerts-gmbh.de/VfE.webm" type="video/webm">
+        <source src="http://clips.vorwaerts-gmbh.de/VfE.ogv" type="video/ogv">
+</video>
+         
         <br  class="clear"/>
         <div class="wrapper" >
-            <div id="content">
-                <ul>
-                    <li><a href="search.php">Search</a></li>
-                    <li><a href="last.php">Last</a></li>
-                    <li><a href="legal.php">Legal</a></li>                  
-                    <li><a href="random.php">Random</a></li>
-                </ul>
-            </div>
+            <section id="content">
+                <article>
+                    <nav>
+                        <a href="search.php">Search</a>
+                        <a href="last.php">Last</a>
+                        <a href="legal.php">Legal</a>             
+                        <a href="random.php">Random</a>
+                    </nav>
+                </article>
+            </section>
         </div>
         <br  class="clear"/>
         <div class="wrapper" >
-            <div id="footer">
-                <ul>
-                    <li><a href="search.php">Search</a></li>
-                    <li><a href="last.php">Last</a></li>
-                    <li><a href="legal.php">Legal</a></li>                  
-                    <li><a href="random.php">Random</a></li>
-                </ul>
-            </div>
+            <footer>
+                <nav>
+                    <ul>
+                        <li><a href="search.php">Search</a></li>
+                        <li><a href="last.php">Last</a></li>
+                        <li><a href="legal.php">Legal</a></li>                  
+                        <li><a href="random.php">Random</a></li>
+                    </ul>
+                </nav>
+            </footer>
         </div>
         <br  class="clear"/>
 
